# nikkoe-backend

./: .coverage  .dockerignore  .env.example  .gitignore  CI_CD_GAPS.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: README.md  ci.yml
app/: README.md  config.py  dependencies.py  errors.py  main.py  schemas.py
app/ebay/: client.py  scheduler.py
app/middleware/: README.md  auth.py
app/repositories/: README.md  base.py  category.py  channel.py  currency.py  customer.py  ebay_token.py  inventory.py  item.py  location.py  receipt.py  sale.py  supplier.py  supplier_alias.py  supplier_quote.py  user.py
app/routers/: README.md  auth.py  categories.py  channels.py  currencies.py  customers.py  ebay.py  inventory.py  items.py  locations.py  receipts.py  sales.py  supplier_quotes.py  suppliers.py  users.py
app/services/: README.md  category.py  channel.py  (+12 more)
docs/: channel-customer-quote-endpoints.drawio  create-receipt-flow.drawio  create-sale-flow.drawio  data-flow.md  login-flow.drawio
scripts/: audit_stock_discrepancies.py  reconcile_stock_discrepancies.py
src/: container.ts  server.ts
tests/: README.md  conftest.py  test_auth_cache.py  test_auth_enforcement.py  test_dependencies.py  test_endpoint_smoke.py  test_errors.py  test_health.py  test_invoice_parser.py  test_invoice_parser_unit.py  test_repositories.py  test_response_contracts.py  test_router_responses.py  test_routers.py  test_schemas.py  test_services.py  test_stock_reconciliation.py  test_stock_valuation.py
(+88 files in other folders)
