[project]
name = "nikkoe-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.42.0",
    "supabase==2.28.3",
    "python-dotenv==1.2.2",
    "pydantic[email]==2.12.5",
    "pydantic-settings==2.13.1",
    "httpx==0.28.1",
    "cachetools>=5.3.0",
    "apscheduler==3.11.2",
    "pdfplumber>=0.11.0",
    "openai>=1.40.0",
    "python-multipart>=0.0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
